# fluxy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
fluxy/: __init__.py  fluxy.py
tests/: test_flux.py
