[tool.poetry]
name = "fluxy"
version = "0.1.0"
description = "Flux DSL for Python"
authors = ["Boudewijn van Groos <boudewijn.vangroos@foundationzero.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pyright = "^1.1.318"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
